<resources>
    <string name="app_name">YChat</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_me">Me</string>
    <string name="menu_group_chat">Group Chat</string>
    <string name="menu_add_contacts">Add Contacts</string>
    <string name="menu_scan_qr_code">Scan QR Code</string>
    <string name="menu_money">Money</string>
    <string name="menu_help_feedback">Help &amp; Feedback</string>
</resources>
