<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_group_chat"
        android:icon="@drawable/menu_group_chat"
        android:title="@string/menu_group_chat" />
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/menu_add_contacts"
        android:title="@string/menu_add_contacts" />
    <item
        android:id="@+id/action_scan_qr_code"
        android:icon="@drawable/menu_scan_qr"
        android:title="@string/menu_scan_qr_code" />
    <item
        android:id="@+id/action_money"
        android:icon="@drawable/menu_money"
        android:title="@string/menu_money" />
    <item
        android:id="@+id/action_help_feedback"
        android:icon="@drawable/menu_help"
        android:title="@string/menu_help_feedback" />

</menu>