<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.yumengsong.ychat.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#212121"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/tab_bg">

        <me.yumengsong.ychat.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:color="#ff45c01a"
            app:icon="@drawable/tab_chats"
            app:text="@string/tab_chats"
            app:text_size="12sp" />

        <me.yumengsong.ychat.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:color="#ff45c01a"
            app:icon="@drawable/tab_contacts"
            app:text="@string/tab_contacts"
            app:text_size="12sp" />

        <me.yumengsong.ychat.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:color="#ff45c01a"
            app:icon="@drawable/tab_discover"
            app:text="@string/tab_discover"
            app:text_size="12sp" />

        <me.yumengsong.ychat.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:color="#ff45c01a"
            app:icon="@drawable/tab_me"
            app:text="@string/tab_me"
            app:text_size="12sp" />
    </LinearLayout>
</LinearLayout>
